<resources>
    <string name="app_name">QuizApp2025</string>
    <string name="str_question1">Question 1</string>
    <string name="str_question2">Question 2</string>
    <string name="str_question3">Question 3</string>
    <string name="str_question4">Question 4</string>
    <string name="str_question5">Question 5</string>
    <string name="str_question6">Question 6</string>
    <string name="str_correct_answers">Correct Answers:</string>
    <string name="str_test_your_knowledge">Test Your Knowledge</string>

    <string name="title_activity_q1">Question 1</string>
    <string name="q1_text">What is the name for Android Version 4.1?</string>
    <string name="q1_answer1" translatable="false">Honeycomb</string>
    <string name="q1_answer2" translatable="false">Ice Cream Sandwich</string>
    <string name="q1_answer3" translatable="false">Jelly Bean</string>
    <string name="q1_answer4" translatable="false">KitKat</string>
    <string name="q1_answer5" translatable="false">Lollipop</string>
    <string name="q1_continue">Check in</string>


    <string name="backbtn_string">Next Question</string>
    <string name="positive_feedback1">Excellent! Right Answer.</string>
    <string name="negative_feedback1">Wrong Answer.</string>
    <string name="positive_feedback2">Wow, you got it!</string>
    <string name="negative_feedback2">Sorry, try again later.</string>
    <string name="positive_score">You just earned # point(s).</string>
    <string name="negative_score">No point this time.</string>

    <string name="title_activity_q2">Question 2</string>
    <string name="q2_text">What is the name for Android Version 13?</string>
    <string name="q2_right_answer" translatable="false">Tiramisu</string>

    <string name="title_activity_q3">Question 3</string>
    <string name="q3_text">Which Android versions do not belong to Jelly Bean?</string>
    <string name="q3_answer1" translatable="false">4.0</string>
    <string name="q3_answer2" translatable="false">4.1</string>
    <string name="q3_answer3" translatable="false">4.2</string>
    <string name="q3_answer4" translatable="false">4.3</string>
    <string name="q3_answer5" translatable="false">4.4</string>
    <string name="q3_continue">Check in</string>

    <string name="title_activity_q4">Question 4</string>
    <string name="q4_text">Click the Overflow Menu in this screenshot!</string>

    <string name="title_activity_q5">Question 5</string>
    <string name="q5_text">Which API Version has Android 15 (Vanilla Ice Cream)?Lollipop?</string>

    <string name="title_activity_q6">Question 6</string>
    <string name="q6_text">Pick the name of Android Version 3.0</string>

</resources>